--- a/index.html
+++ b/index.html
@@ -1,20 +1,48 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <title>swordfish</title>
    <link rel="stylesheet" href="css/chessboard-0.3.0.css" />
+   <link rel="stylesheet" href="css/bootstrap.css" />
+   <link rel="stylesheet" href="css/theme.css" />
 </head>
 <body>
   <script src="js/json3.min.js"></script>
-  <script src="js/jquery-1.10.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/chessboard.js"></script>
   <script src="js/chess.js"></script>
 
-  <div id="board" style="width: 400px"></div>
-  <p>Status: <span id="status"></span></p>
-  <p>FEN: <span id="fen"></span></p>
-  <p>PGN: <span id="pgn"></span></p>
-  <script src="engine.js"></script>
-  <script src="game.js"></script>
+  <center>
+    <div id="board" style="width: 400px"></div>
+    <script src="engine.js"></script>
+    <script src="game.js"></script>
+
+    <p>Status: <span id="status"></span></p>
+    <p>FEN: <span id="fen"></span></p>
+    <p>PGN: <span id="pgn"></span></p>
+</center>
+
 </body>
 </html>
+
+<!-- some code that Martino sketched out, gives a rough idea for how to address
+     data attribute passing for assigning player types.
+            
+    //$('.element').data("thing", "value")
+      <select name="white">
+        <option value="human" defualt>human</option>
+        <option value="computer" />
+      </select>
+      <script type="text/javascript">
+        $('#whiteDropdown li').on('click', function(e) {
+          selection = e.target.innerText()
+          swithch selection {
+            case "Human":
+              whitePlayer = human
+              break;
+            case ""
+          }
+        })
+      </script>
+ -->
