Add terrible eval function, everything is broken

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <center>
     <div id="board" style="width: 400px"></div>
     <script src="engine.js"></script>
+    <script src="human.js"></script>
     <script src="game.js"></script>
 
     <p>Status: <span id="status"></span></p>
