Still looking for performance problem.
- added "click" button to control start of game
- added a flip_turn() and undo_move method to chess.js library
- removed all board copying from negamax algorithm

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
     <p>Status: <span id="status"></span></p>
     <p>FEN: <span id="fen"></span></p>
     <p>PGN: <span id="pgn"></span></p>
+    <button class="start">Start</button>
 </center>
+
 
 </body>
 </html>
 
 <!-- some code that Martino sketched out, gives a rough idea for how to address
      data attribute passing for assigning player types.
-            
+
     //$('.element').data("thing", "value")
       <select name="white">
         <option value="human" defualt>human</option>
